[gd_scene load_steps=19 format=2]

[ext_resource path="res://mobs/bosses/BullBoss/RoboBull.gd" type="Script" id=1]
[ext_resource path="res://mobs/bosses/BullBoss/RoboBull-1.png.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/mobArt/damaged and death.png" type="Texture" id=3]
[ext_resource path="res://mobs/bosses/BullBoss/bull_prep_charge.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/shaders/hurt.tres" type="Shader" id=5]
[ext_resource path="res://assets/animations/mobsHurt.tres" type="Animation" id=6]
[ext_resource path="res://assets/animations/hurt.tres" type="Animation" id=7]
[ext_resource path="res://assets/sfx/metal_ting.wav" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/flashState = 0.0

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 288, 288 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 123, 58, 41 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 164, 58, 41 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 205, 58, 41 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 246, 58, 41 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 287, 58, 41 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 288, 288 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "charge",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 45.0
height = 30.0

[node name="RoboBull" type="KinematicBody2D" groups=["mobs"]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 15 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "charge"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Hurt = ExtResource( 6 )
anims/hurt = ExtResource( 7 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HitSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ChargeCooldown" type="Timer" parent="."]

[node name="ChargeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ChargeCooldown" to="." method="_on_ChargeCooldown_timeout"]
